--- a/Coin Flip Game/coinflip.html
+++ b/Coin Flip Game/coinflip.html
@@ -9,6 +9,8 @@
     </head>
 
     <body>
+        <p class="title-text">Coin Flip Game</p>
+
         <button class="move-button" onclick="playGame('heads');">
             <img class="image-icon" src="images/heads.png">
         </button>
